# pybioclip

./: .gitignore  .zenodo.json  404.html  CITATION.cff  Dockerfile  FilterTOLExample.ipynb  GradCamExperiment.ipynb  LICENSE  README.md  apptainer.def  index.html  mkdocs.yml  objects.inv  profile-autocast.py  profile.json  pyproject.toml  vit_example.py
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml  deploy-image.yml  publish-to-pypi.yml  run-tests.yml  validate-zenodo.yml
acknowledgments/: index.html
apptainer/: index.html
assets/: hawaii_bird_families_list.txt
command-line-help/: index.html
command-line-tutorial/: index.html
docker/: index.html
docs/: acknowledgments.md  apptainer.md  command-line-help.md  command-line-tutorial.md  docker.md  geo-restricted-taxa.md  index.md  python-api.md  python-tutorial.md
docs/assets/: hawaii.geojson  hawaii_bird_family_bins_list.csv  hawaii_bird_species_list.txt
docs/css/: mkdocstrings.css
examples/: FewShotRidgeClassifier.ipynb  FewShotSVM.ipynb  FewShotSimpleShot.ipynb  FineTuneRidgeClassifier.ipynb  FineTuneSVM.ipynb  FineTuneSimpleShot.ipynb  GradCamExperiment.ipynb  PredictImages.ipynb  TOL-Subsetting.ipynb  iNaturalistPredict.ipynb
geo-restricted-taxa/: index.html
python-api/: index.html
python-tutorial/: index.html
search/: search_index.json
src/bioclip/: __about__.py  __init__.py  __main__.py  _constants.py  commands.py  output.py  patch_gui.py  predict.py  recorder.py  templates.py
tests/: __init__.py  test_main.py  test_patch_gui.py  test_predict.py  test_recorder.py
