[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bioclip"]

[project]
name = "pybioclip"
dynamic = ["version"]
description = 'Python package that simplifies using the BioCLIP foundation model.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "John Bradley", email = "johnbradley2008@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  'open_clip_torch',
  'torchvision',
  'torch',
  'prettytable',
  'pandas',
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings-python"
]

[project.urls]
Documentation = "https://imageomics.github.io/pybioclip/"
Issues = "https://github.com/Imageomics/pybioclip/issues"
Source = "https://github.com/Imageomics/pybioclip"

[project.scripts]
bioclip = "bioclip.__main__:main"

[tool.hatch.version]
path = "src/bioclip/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bioclip tests}"

[tool.coverage.run]
source_pkgs = ["bioclip", "tests"]
branch = true
parallel = true
omit = [
  "src/bioclip/__about__.py",
]

[tool.coverage.paths]
bioclip = ["src/bioclip", "*/bioclip/src/bioclip"]
tests = ["tests", "*/bioclip/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
